--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,17 @@
 <resources>
     <string name="app_name">Black And White</string>
 
+    <string name="play">Play</string>
+    <string name="settings">Settings</string>
+    <string name="best_score">Best Score</string>
+    <string name="quit">Quit</string>
+
+    <string name="score">Score</string>
+    <string name="game_over">Game Over</string>
+
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="quit_msg">Quit the Game ?</string>
+
+
 </resources>
